# rsplayer

./: Cargo.toml  LICENSE  README.md
src/: audio_handler.rs  bind_callback.rs  bind_functions.rs  config.rs  event_handler.rs  filesystem.rs  flags.rs  macros.rs  main.rs  menu.rs  menu_handler.rs  rs_player.rs  status_bar.rs  switch_song_callback.rs  system.rs  wrappers.rs
src/audio/: player.rs
src/event_handler/: keys.rs  resize.rs
src/flags/: list.rs
src/wrappers/: cursor.rs  print.rs  style.rs
