[package]
name = "rsplayer"
version = "1.0.0"
authors = ["asdfish <lgray3420@gmail.com>"]
description = "rust music player"
license = "BSD-3-Clause"
repository = "https://github.com/asdfish/rsplayer"
readme = "README.md"
edition = "2021"

[dependencies]
crossterm = "0.28.1"
fastrand = "2.2.0"
rodio = { version = "0.20.1", features = [ "symphonia-all" ] }

[dependencies.symphonia-core]
version = "0.5.4"
features = [ "opt-simd-avx", "opt-simd-neon", "opt-simd-sse" ]

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3.17"

[profile.release]
strip = true
lto = true
