[package]
name = "rsplayer"
version = "1.0.1"
authors = ["asdfish <lgray3420@gmail.com>"]
description = "rust music player"
license = "BSD-3-Clause"
repository = "https://github.com/asdfish/rsplayer"
readme = "README.md"
edition = "2021"

[dependencies]
cpal = "0.15.3"
ratatui = "0.29.0"
symphonia = { version = "0.5.4", features = ["all-codecs", "opt-simd"] }
