[package]
name = "rsplayer"
version = "1.0.1"
authors = ["asdfish <lgray3420@gmail.com>"]
description = "rust music player"
license = "BSD-3-Clause"
repository = "https://github.com/asdfish/rsplayer"
readme = "README.md"
edition = "2021"

[dependencies]
argv = "0.1.11"
color-eyre = "0.6.3"
cpal = "0.15.3"
getargs = "0.5.0"
ratatui = "0.29.0"
symphonia = { version = "0.5.4", features = ["all-codecs", "opt-simd"] }
thiserror = "2.0.11"
unicode-width = "0.2.0"
